# webserver

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  main.cpp  request.txt  webserver.conf
conf/: webserver.conf
config/: Config.cpp  Config.hpp  Global.hpp  LocationBlock.hpp  ServerBlock.cpp  ServerBlock.hpp
data/lol/: file.txt
html/: dir.html  file.txt  kek.txt
html/a/: index.html
html/lol/: index.html
http/: Request.hpp  Response.cpp  Response.hpp  Status.hpp  Utils.cpp
include/: Config.hpp  ConfigException.hpp  IOPoll.hpp  Location.hpp  LocationBlock.hpp  MyException.hpp  Parser.hpp  Request.hpp  ServerBlock.hpp  StatusCode.hpp  URI.hpp  client.hpp  connection.hpp  server.hpp  utils.hpp
include/config/: Config.hpp  ConfigException.hpp  LocationBlock.hpp  ServerBlock.hpp
notes/: Intermediaries.txt  header fields.txt  message format.txt  request-responce.txt
src/: Config.cpp  IOPoll.cpp  Location.cpp  LocationBlock.cpp  Request.cpp  ServerBlock.cpp  URI.cpp  client.cpp  connection.cpp  main.cpp  main2.cpp  server.cpp  test.cpp
src/cgi/: cgi.cpp  cgi.hpp
src/config/: Config.cpp  Config.hpp  ConfigException.hpp  Global.cpp  LocationBlock.cpp  LocationBlock.hpp  LocationConfig.cpp  LocationConfig.hpp  ServerBlock.cpp  ServerBlock.hpp  ServerConfig.cpp  ServerConfig.hpp
src/core/: Client.cpp  Client.hpp  Connection.cpp  Connection.hpp  Server.cpp  Server.hpp  Utils.cpp  Utils.hpp
src/http/: Global.cpp  Global.hpp  Headers.cpp  Headers.hpp  Pages.cpp  Pages.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp  Status.cpp  Status.hpp  URI.cpp  URI.hpp  Utils.cpp  Utils.hpp
srcs/: IOPoll.cpp  Server.hpp  client.cpp  connection.cpp  main.cpp  server.cpp  test.cpp
srcs/include.dir/: IOPoll.hpp  client.hpp  connection.hpp  server.hpp  utils.hpp
